Cleaning CSS and add custom properties

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* CSS RESET */
+
 *,
 *::before,
 *::after {
@@ -64,21 +66,43 @@ html {
 }
 
 @font-face {
-  font-family: "Suisse";
+  font-family: "Sans";
   src: url("Assets/Font/SuisseIntl-Regular.otf");
   font-weight: normal;
 }
 
 @font-face {
-  font-family: "Suisse";
+  font-family: "Sans";
   src: url("Assets/Font/SuisseIntl-Bold.otf");
   font-weight: bold;
 }
 
 @font-face {
-  font-family: "Suisse";
+  font-family: "Sans";
   src: url("Assets/Font/SuisseIntl-SemiBold.otf");
   font-weight: 600;
+}
+
+@font-face {
+  font-family: "Works";
+  src: url("Assets/Font/SuisseWorks-Regular.otf");
+  font-weight: normal;
+}
+
+/* CUSTOM PROPERTIES */
+
+:root {
+  /* --font-sans: "SuisseSans";
+  --font-sans: "SuisseSerif"; */
+  --font-weight-regular: normal;
+  --font-weight-semibold: 600;
+  --font-weight-bold: bold;
+
+  --color-dark-1: black;
+  --color-dark-2: rgb(27, 27, 27);
+  --color-dark-3: rgb(119, 119, 119);
+  --color-bright-1: white;
+  --color-bright-2: rgb(193, 193, 193);
 }
 
 /* CODE GOES HERE */
@@ -88,7 +112,7 @@ body {
 }
 
 .navbar {
-  background-color: rgb(119, 119, 119);
+  background-color: var(--color-dark-3);
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -103,8 +127,8 @@ body {
   background-color: transparent;
   color: transparent;
   border: none;
-  font-family: "Suisse";
-  color: black;
+  font-family: "Sans";
+  color: var(--color-dark-1);
   font-size: 1.25rem;
   cursor: pointer;
 }
@@ -122,9 +146,9 @@ body {
 }
 
 .nav-item {
-  color: white;
+  color: var(--color-bright-1);
   text-decoration: none;
-  font-family: "Suisse";
+  font-family: "Sans";
   font-size: 1.5rem;
   margin-left: 3rem;
 }
@@ -135,19 +159,10 @@ body {
   text-decoration: underline;
 }
 
-/* @keyframes slide-from-left {
-  from {
-    right: 100%;
-  }
-  to {
-    right: 20%;
-  }
-} */
-
 .screen {
   height: 100%;
   width: 80%;
-  background-color: rgb(27, 27, 27);
+  background-color: var(--color-dark-2);
   position: fixed;
   bottom: 0;
   right: 100%;
@@ -156,10 +171,6 @@ body {
   flex-direction: column;
   align-items: center;
   transition: 0.5s all ease-in-out;
-  /* text-align: center; */
-  /* animation-name: slide-from-left;
-  animation-duration: 800ms;
-  transition-timing-function: cubic-bezier(0.17, 0.67, 0.33, 1.01); */
 }
 
 .show {
@@ -175,17 +186,17 @@ body {
   margin-bottom: 2rem;
 }
 .cat-head {
-  font-family: "Suisse";
-  color: white;
+  font-family: "Sans";
+  color: var(--color-bright-1);
   size: 1rem;
   margin-bottom: 1rem;
 }
 
 .cat-items {
-  font-family: "Suisse";
-  color: rgb(193, 193, 193);
+  font-family: "Sans";
+  color: var(--color-bright-2);
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: var(--font-weight-semibold);
   margin-bottom: 0.5rem;
   text-decoration: underline;
   cursor: pointer;
@@ -203,8 +214,8 @@ body {
   background-color: transparent;
   color: transparent;
   border: none;
-  font-family: "Suisse";
-  color: white;
+  font-family: "Sans";
+  color: var(--color-bright-1);
   font-size: 1.25rem;
   cursor: pointer;
 }
@@ -216,7 +227,7 @@ body {
 
 .hero-logo {
   font-family: "NewSpirit";
-  color: white;
+  color: var(--color-bright-1);
   font-size: 18vw;
   text-align: center;
   margin-top: 2.5rem;
@@ -224,9 +235,8 @@ body {
 
 .hero-desc {
   width: 50%;
-  color: white;
-  font-family: "Suisse", sans-serif;
-  font-weight: normal;
+  color: var(--color-bright-1);
+  font-family: "Sans";
   font-size: 1.25rem;
   text-align: center;
   margin-left: auto;
@@ -237,9 +247,9 @@ body {
   font-size: 0.75rem;
   width: 100%;
   padding: 1.5rem auto;
-  background: #000000;
-  color: white;
-  font-family: "Suisse";
+  background: var(--color-dark-1);
+  color: var(--color-bright-1);
+  font-family: "Sans";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -269,7 +279,7 @@ body {
 
 .block-card {
   max-width: 360px;
-  color: white;
+  color: var(--color-bright-1);
   flex: 0 1 100%;
   margin: 1rem;
   padding: 1rem;
@@ -284,29 +294,28 @@ body {
 }
 
 .block-card-title {
-  font-family: "Suisse";
+  font-family: "Sans";
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
-  color: white;
+  color: var(--color-bright-1);
 }
 
 .block-card-img {
   background-color: #333333;
   width: 100%;
-  aspect-ratio: 1 / 1;
   margin-bottom: 1.5rem;
 }
 
 .block-card-img img {
-  height: 100%;
-  object-fit: cover;
+  /* height: 100%; */
+  object-fit: fill;
   object-position: center;
 }
 
 .block-card-desc {
-  font-family: "Suisse";
-  font-size: 1rem;
-  color: #797979;
+  font-family: "Sans";
+  font-size: 0.8rem;
+  color: var(--color-dark-3);
 }
 
 .block-card-tags {
@@ -316,19 +325,19 @@ body {
 .tags {
   width: fit-content;
   padding: 0.15rem 0.65rem;
-  font-family: "Suisse";
+  font-family: "Sans";
   font-size: 0.65rem;
-  font-weight: 600;
+  font-weight: var(--font-weight-semibold);
   letter-spacing: 0.5px;
-  color: black;
+  color: var(--color-dark-1);
   border-radius: 16px;
-  background-color: rgb(119, 119, 119);
+  background-color: var(--color-dark-3);
 }
 
 .block-card-date {
-  font-family: "Suisse";
+  font-family: "Sans";
   font-size: 0.75rem;
-  color: #797979;
+  color: var(--color-dark-3);
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   font-weight: bold;
