--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ body {
   font-size: 0.75rem;
   width: 100%;
   padding: 1.5rem auto;
-  background: var(--color-dark-1);
+  background: none;
   color: var(--color-bright-1);
   font-family: "Sans";
   display: flex;
@@ -342,4 +342,130 @@ body {
   margin-bottom: 0.5rem;
   font-weight: bold;
   letter-spacing: 1px;
+}
+
+.thumb-wrapper {
+  width: 100%;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  display: flex;
+  gap: 6px;
+  flex-wrap: wrap;
+  margin-top: 6rem;
+  padding-bottom: 6rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.thumb {
+  max-width: 45%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  flex: 0 2 50%;
+  border: 1px solid var(--color-dark-2);
+  padding: 0.5rem;
+}
+
+.thumb-img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.dimmer {
+  background-color: var(--color-dark-1);
+  opacity: 0;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  z-index: 999;
+  transition: 0.5s all ease-in-out;
+}
+
+.dimmer-show {
+  display: block;
+  opacity: 75%;
+  transition: 0.5s all ease-in-out;
+}
+
+.modal {
+  width: 90%;
+  height: 75%;
+  background-color: var(--color-dark-1);
+  border: 1px solid var(--color-dark-2);
+  display: none;
+  opacity: 0%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  z-index: 1000;
+  padding: 1rem;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.modal-show {
+  display: block;
+  opacity: 100%;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.modal-img {
+  width: 100%;
+  aspect-ratio: 3 / 2;
+  object-fit: cover;
+  margin-bottom: 1.5rem;
+}
+
+.modal-date {
+  color: var(--color-dark-3);
+  font-family: "Sans";
+  font-weight: 700;
+  font-size: 0.75rem;
+  margin-bottom: 1.5rem;
+}
+
+.modal-title {
+  color: var(--color-bright-1);
+  font-family: "Sans";
+  margin-bottom: 0.5rem;
+}
+
+.modal-desc {
+  color: var(--color-bright-2);
+  font-family: "Sans";
+}
+
+.modal-tags {
+  background: var(--color-bright-1);
+  color: var(--color-dark-1);
+  font-family: "Sans";
+  font-size: 0.5rem;
+  border-radius: 24px;
+  width: fit-content;
+  padding: 0.25rem 0.5rem;
+  position: absolute;
+  bottom: 1rem;
+}
+
+.modal-close {
+  z-index: 10000;
+  background-color: transparent;
+  padding: 1rem;
+  color: var(--color-bright-1);
+  font-family: "Sans";
+  font-size: 1rem;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border: none;
+}
+
+.modal-close:hover {
+  background-color: var(--color-bright-1);
+  color: var(--color-dark-1);
 }
